# opentang

./: .gitignore  CODEX_AUDIT_REPORT.md  CODEX_AUDIT_REPORT_V2.md  CODEX_AUDIT_REPORT_V3.md  CODEX_AUDIT_REPORT_V4.md  DistroKid_Login_SOP.md  GOOSE-AGENT-ARCHITECTURE.md  MANUS_MASTER_KNOWLEDGE.md  README.md  RESEND_EMAIL_INFRASTRUCTURE.md  SKILLS-KNOWLEDGE-BACKUP-BLUEPRINT.md  ares-wallet-verification.md  audit_trading_repos.csv  cdn_urls.md  goldsky_whale_analysis.py  grok-openclaw-analysis.md  herobase-code-changes.md  herobase-contract-addresses.md  ideas.md  index.html  openclaw-debunk-findings.md  package-lock.json  package.json  pnpm-lock.yaml  polymarket-fee-findings.md  prereason-live-intel-20260409.md  review_notes.md  todo.md  trading-intel-assessment.md  trading-stack-knowledge.md  vicfoundation-seo-intel.md
apex-knowledge/: ANTI_DRIFT_PROTOCOL.md  APEX-AGENT-MIGRATION-BLUEPRINT.md  DAPP-DEPLOYMENT-PATTERN.md  MASTER-TODO-LIST.md  SKILLS-KNOWLEDGE-BACKUP-BLUEPRINT.md
apex-knowledge-package/: APEX-KNOWLEDGE-MANIFEST.md  deploy-to-vds.sh  prereason_client.py
client/: index.html
drizzle/: 0000_green_korath.sql  0001_legal_princess_powerful.sql  0002_dry_magma.sql  schema.ts
herobase-code-package/: IntroOverlay.jsx  LanguageSelector.jsx  LiveTicker.jsx  NFTCarousel.jsx  README-DEPLOY.md
knowledge-base/: APEX-MASTER-TRADING.md  HABFF.sol  (+7 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: install.rs  mod.rs  registry.rs  system.rs  updater.rs
(+164 files in other folders)
